--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,11 @@
     },
     "require-dev": {
         "symfony/debug-pack": "*",
+        "symfony/google-mailer": "4.4.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*"
+        "symfony/test-pack": "*",
+        "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
         "preferred-install": {
