--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,8 +1,23 @@
 security:
+    encoders:
+        Symfony\Component\Security\Core\User\User:
+            algorithm: 'bcrypt'
+            cost: 13
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: null }
+#        in_memory: { memory: null }
+        in_memory:
+            memory:
+                users:
+                    admin:
+                        password: "$2y$13$Z.TGODo1uckoit4HRmZuBOCQpRFYwgYtbd8FK/4DFpRUgXhnCyoMa"
+                        roles: ['ROLE_ADMIN']
     firewalls:
+        admin_secured_area:
+            pattern: ^/admin/
+            http_basic:
+                realm: "Secured Admin Area"
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -18,5 +33,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+
