7章 ・アノテーションは未設定 ・CORSは動作未確認

--- a/.env.dist
+++ b/.env.dist
@@ -39,3 +39,7 @@ APP_SECRET=b184d01f53d022b38c99d43593f23964
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
 
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
