--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/rest-bundle": "^2.6",
+        "jms/serializer-bundle": "^3.5",
+        "league/csv": "^9.5",
+        "nelmio/cors-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
@@ -28,6 +32,7 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-pack": "*",
         "symfony/google-mailer": "4.4.*",
         "symfony/maker-bundle": "^1.0",
