--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     url_base: http://127.0.0.1:8000
+    csv_encoding: Shift_JIS
+
 
 services:
     # default configuration for services in *this* file
@@ -26,3 +28,14 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    app.inquiry_csv_builder:
+        class: App\Service\Csv\InquiryCsvBuilder
+        arguments: ['%csv_encoding%', '@app.inquiry_repository']
+        public: true
+
+    app.inquiry_repository:
+        class: App\Repository\InquiryRepository
+        factory: ['@doctrine.orm.entity_manager', 'getRepository']
+        arguments:
+            - 'App\Entity\Inquiry'
